Speedrun Timer + Fixes for blurred mode

--- a/style/style.css
+++ b/style/style.css
@@ -67,25 +67,7 @@ img {
 	transform: translateY(-1px);
 }
 
-/* Top-right controls (New Game etc.) */
-#topRightContainer {
-	position: absolute;
-	top: 0.5rem;
-	right: 0.5rem;
-	display: flex;
-	gap: 0.5rem;
-}
-#bottomLeftContainer {
-	position: absolute;
-	bottom: 0.5rem;
-	left: 0.5rem;
-	display: flex;
-	gap: 0.5rem;
-	font-size: 1.5rem;
-	color: rgba(255, 255, 255, 0.7);
-	text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-	
-}
+
 
 #debugWindow {
 	position: fixed;
